# gsw-torch

./: .gitignore  .ruff.toml  CHANGELOG.md  COMMIT_MESSAGE.txt  COMPREHENSIVE_TESTING.md  CONTRIBUTING.md  CONVERSION_PLAN.md  GIT_SETUP.md  IMPLEMENTATION_STATUS.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  RELEASE.md  TAG_MESSAGE.txt  coverage.xml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
gsw_torch/: __init__.py  _utilities.py  _version.py  conversions.py  density.py  energy.py  freezing.py  geostrophy.py  ice.py  interpolation.py  stability.py  utility.py
gsw_torch/_core/: __init__.py  _saar_data.py  conversions.py  ct_from_pt_coeffs.npy  ct_from_pt_correction_coeffs.npy  density.py  energy.py  frazil.py  freezing.py  gibbs_helpers.py  ice.py  saar_data.npz  stability.py  utility.py
paper/: ai_usage_disclosure.md  paper.bib  paper.md
reference/: gsw
reports/: autograd_compatibility.csv  comprehensive_test_report.md  function_inventory.json  numerical_parity.csv  performance_benchmarks.csv  test_results.json  test_summary.json
test_install_env/: pyvenv.cfg
tests/: __init__.py  conftest.py  test_conversions.py  test_conversions_extended.py  test_density.py  test_density_extended.py  test_freezing.py  test_geostrophy.py  test_gradcheck.py  test_gradcheck_comprehensive.py  test_integration.py  test_parity.py  test_parity_comprehensive.py  test_stability.py
tests/test_data/: density_10.npz  density_100.npz  density_1000.npz  density_10000.npz  enthalpy_10.npz  enthalpy_100.npz  enthalpy_1000.npz  enthalpy_10000.npz  entropy_10.npz  entropy_100.npz  entropy_1000.npz  entropy_10000.npz  freezing_10.npz  freezing_100.npz  freezing_1000.npz  freezing_10000.npz  geostrophy_10.npz  geostrophy_100.npz  geostrophy_1000.npz  geostrophy_10000.npz  ice_10.npz  ice_100.npz  ice_1000.npz  ice_10000.npz  metadata.json  oceanographic_10.npz  oceanographic_100.npz  oceanographic_1000.npz  oceanographic_10000.npz  profile_10.npz  profile_100.npz  profile_1000.npz  profile_10000.npz  salinity_10.npz  salinity_100.npz  salinity_1000.npz  salinity_10000.npz  temperature_10.npz  temperature_100.npz  temperature_1000.npz  (+1 more)
tools/: README.md  __init__.py  discover_functions.py  generate_reports.py  generate_test_data.py  run_comprehensive_tests.py  run_full_test_suite.sh  test_runner.py
