[project]
name = "gsw-torch"
version = "0.1.0"
description = "PyTorch implementation of the Gibbs SeaWater (GSW) Oceanographic Toolbox"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
authors = [
    {name = "GSW PyTorch Contributors"},
]
keywords = [
    "oceanography",
    "pytorch",
    "thermodynamics",
    "seawater",
    "teos-10",
    "gsw",
    "autograd",
    "gpu",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Oceanography",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",  # For reference comparison and test data loading
]

[project.urls]
Homepage = "https://github.com/0jrm/gsw-torch"
Documentation = "https://github.com/0jrm/gsw-torch#readme"
Repository = "https://github.com/0jrm/gsw-torch"
Issues = "https://github.com/0jrm/gsw-torch/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gsw_torch"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"tests/**" = ["E501", "F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
markers = [
    "parity: mark test as parity test (requires reference GSW)",
    "gradcheck: mark test as gradient check test",
    "comprehensive: mark test as comprehensive validation test",
    "autograd: mark test as autograd compatibility test",
    "benchmark: mark test as performance benchmark test",
]
